# fmtparse

./: .gitignore  pytest.ini  setup.cfg  setup.py
.github/workflows/: branch.yml  main.yml  tag.yml
fmtparse/: common.py  dollar.py  fstring.py  printf.py  printf_bin.pyx  wellknown.py
tests/: test_dollar.py  test_fstring.py  test_printf.py
