[metadata]
name = fmtparse
version = attr: fmtparse.version.VERSION
url = https://github.com/wtnb75/fmtparse
author = Watanabe Takashi
author_email = wtnb75@gmail.com
license = MIT
license_file = LICENSE
description = parse format string
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Topic :: Documentation
  Programming Language :: Python :: 3

[options]
zip_safe = True
packages = find:
